# mipt-psamcs-atp-formal-semester-3

./: README.md
prac-1/Finite-automation/: .gitignore  BuildApp.txt  CMakeLists.txt  README.md  input.doa  main.cpp  main_test.cpp
prac-1/Finite-automation/DFA/: DFA.cpp  DFA.h
prac-1/Finite-automation/NFA/: NFA.cpp  NFA.h
prac-1/Finite-automation/complete_DFA/: complete_DFA.cpp  complete_DFA.h
prac-1/Finite-automation/data/input_data/: input_data.cpp
prac-1/Finite-automation/data/output_data/: output_data.cpp
prac-1/Finite-automation/lib/: DFA.h  NFA.h  complete_DFA.h  input_data.h  minimal_complete_DFA.h  one_letter_NFA.h  output_data.h
prac-1/Finite-automation/minimal_complete_DFA/: minimal_complete_DFA.cpp  minimal_complete_DFA.h
prac-1/Finite-automation/one_letter_NFA/: one_letter_NFA.h
prac-1/Finite-automation/src/: DFA.cpp  NFA.cpp  complete_DFA.cpp  input_data.cpp  minimal_complete_DFA.cpp  one_letter_NFA.cpp  output_data.cpp
prac-1/Finite-automation/src/test/: test_suite.cpp
prac-1/Finite-automation/test/lib/: test_complete_dfa.h  test_dfa.h  test_minimal_complete_dfa.h  test_nfa.h  test_one_letter_nfa.h
prac-1/Finite-automation/test/src/: test_complete_dfa.cpp  test_dfa.cpp  test_minimal_complete_dfa.cpp  test_nfa.cpp  test_one_letter_nfa.cpp
prac-1/Finite-automation/tests/: CMakeLists.txt  test_input_1.doa  test_input_2.doa  test_input_3.doa
prac-1/Finite-automation/tests/ nfa/: CMakeLists.txt
prac-1/Finite-automation/tests/complete_dfa/: CMakeLists.txt  test_complete_dfa.cpp  test_complete_dfa.h
prac-1/Finite-automation/tests/dfa/: CMakeLists.txt  test_dfa.cpp  test_dfa.h
prac-1/Finite-automation/tests/minimal_complete_dfa/: CMakeLists.txt  test_minimal_complete_dfa.cpp  test_minimal_complete_dfa.h
prac-1/Finite-automation/tests/nfa/: test_nfa.cpp  test_nfa.h
prac-1/Finite-automation/tests/one_letter_nfa/: CMakeLists.txt  test_one_letter_nfa.cpp  test_one_letter_nfa.h
prac-2/CYK/: BuildApp.txt  main.cpp  mainTest.cpp  toRecognize.txt
prac-2/CYK/cmake/: CodeCoverage.cmake
prac-2/CYK/lib/: CYK.h  inputData.h  outputData.h
prac-2/CYK/src/: CYK.cpp  inputData.cpp  outputData.cpp
prac-2/CYK/tests/: CMakeLists.txt
prac-2/CYK/tests/CYK/: CMakeLists.txt  testCYK.cpp  testCYK.h  testInput.txt  toRecognize.txt
prac-3/LR_1/: README.md  checker.py  conftest.py  lr.py  test_lr.py  utils.py
